# nanoclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  __main__.py  biome.json  config.py  hooks.py  package-lock.json  package.json  permissions.py  pyproject.toml  tsconfig.json
.claude/: settings.json
agent/: compactor.py  loop.py  session.py
agentskit-app/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json
agentskit-app/src/: App.tsx
gateway/: __init__.py  router.py  session.py
gateway/adapters/: __init__.py  base.py  discord.py  slack.py  telegram.py
memory/: workspace.py
providers/: __init__.py  anthropic.py  base.py  openai.py
src/: config.ts  cron.ts  hooks.ts  main.ts  permissions.ts
src/agent/: compactor.ts  loop.ts  session.ts
src/gateway/: index.ts  router.ts  session.ts
src/gateway/adapters/: base.ts  discord.ts  slack.ts  telegram.ts
src/memory/: workspace.ts
src/providers/: anthropic.ts  base.ts  index.ts  openai.ts
src/tools/: files.ts  index.ts  shell.ts  web.ts
src/ui/: App.tsx  SessionPanel.tsx  StatusBar.tsx
tools/: __init__.py  files.py  shell.py  web.py
