[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21"]
slack    = ["slack-bolt>=1.18"]
discord  = ["discord.py>=2.3"]

[project.scripts]
nanoclaw = "nanoclaw.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoclaw*"]
